--- a/AddressablesTools/AddressablesTools.csproj
+++ b/AddressablesTools/AddressablesTools.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AssetsTools.NET" Version="3.0.0-preview4" />
-    <PackageReference Include="System.IO.Hashing" Version="9.0.4" />
+    <PackageReference Include="AssetsTools.NET" Version="3.0.1" />
+    <PackageReference Include="System.IO.Hashing" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
