--- a/CatalogTool/CatalogTool.csproj
+++ b/CatalogTool/CatalogTool.csproj
@@ -9,6 +9,11 @@
     <SelfContained>false</SelfContained>
     <PublishSingleFile>true</PublishSingleFile>
     <ApplicationIcon>app.ico</ApplicationIcon>
+    <AssemblyVersion>1.1</AssemblyVersion>
+    <FileVersion>1.1</FileVersion>
+    <InformationalVersion>1.1 (by Hikaro)</InformationalVersion>
+    <Company>Hikaro</Company>
+    <Authors>Hikaro</Authors>
   </PropertyGroup>
 
   <Target Name="SetNoBuild">
